2011-05-10  Frank Warmerdam  <warmerdam@pobox.com>

	* src/projects.h, src/pj_init.c, src/pj_transform.c: Implement
	support for vto_meter and vunits vertical units transformation.

2011-05-04  Frank Warmerdam  <warmerdam@pobox.com>

	* src/PJ_igh.c: Added goodes interrupted homolosine (#106).

2011-03-28  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_gridlist.c: avoid possible buffer overflow.
	https://bugs.meego.com/show_bug.cgi?id=14963

2011-03-23  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_initcache.c: Fix reversed memcpy that causes a crash on the
	16th item put in the initcache. (#100).

2011-02-21  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_init.c: fix serious bug in locale handling, wasn't copying
	the old locale so it would sometimes get corrupted.

	* src/proj_etmerc.c: added extended transverse mercator impl. (#97)

	* Rerun autogen.sh with the latest versions of automake, autoconf and
	libtool.

2011-02-10  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_gridinfo.c: fix debug bounds reported (#95).

2011-02-08  Frank Warmerdam  <warmerdam@pobox.com>

	* src/PJ_cea.c: Fix particular CEA case  (#94).

	* src/pj_auth.c: correct precision of constants (#93)

	* src/pj_init.c, pj_malloc.c, jniproj.c: avoid C++ comments (#92)

2011-01-11  Frank Warmerdam  <warmerdam@pobox.com>

	* src/PJ_goode.c: fix propogation of es and ctx to sub-projections.

2010-10-19  Frank Warmerdam  <warmerdam@pobox.com>

	* src/proj_api.h, src/projects.h: move pj_clear_initcache() to public
	api and update to 4.8.0 PJ_VERSION to identify when this is available.

2010-08-31  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_gridinfo.c: Move grids in 180 to 360 region to -180 to 0. 
	Improve error/debug reporting. 

2010-08-21  Frank Warmerdam  <warmerdam@pobox.com>

	* nad/test*: default to using ../src/cs2cs

2010-07-31  Frank Warmerdam  <warmerdam@pobox.com>

	* nad/epsg: updated from GDAL.  Adds TMSO projection definitions,